<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.thirdStage.ThirdStageFragment">

    <TextView
        android:id="@+id/tv_sun_exposure_question"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:text="@string/sun_exposure_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/sun_exposure_radio_group"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sun_exposure_question"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rb_sun_expo_yes"
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rb_sun_expo_no"
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_smoke_question"
        app:layout_constraintTop_toBottomOf="@id/sun_exposure_radio_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:text="@string/smoke_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/smoke_radio_group"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/tv_smoke_question"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rb_smoke_yes"
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rb_smoke_no"
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_alcohol_question"
        app:layout_constraintTop_toBottomOf="@id/smoke_radio_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:text="@string/alcoholic_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/alcohol_radio_group"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/tv_alcohol_question"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rb_alcohol_0_1"
            android:text="@string/_0_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rb_alcohol_2_5"
            android:text="@string/_2_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rb_alcohol_5_plus"
            android:text="@string/_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_get_vitamin"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:textAllCaps="false"
        android:text="Get my personalized vitamin"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>